user swagger
